# asr_eval

./: .gitignore  FA.ipynb  Multivariant.ipynb  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  test.ipynb
.github/workflows/: test.yml
asr_eval/: ctc_utils.py  data.py  force_alignment.py  plots.py  serializing.py  srt_utils.py  utils.py
asr_eval/align/: __init__.py  alignment.py  data.py  dynprog.py  matching.py  multiple.py  parsing.py  partial.py  plots.py  recursive.py  timings.py  transcription.py
asr_eval/bench/: README.md  __init__.py  bench.py  check.py  dashboard.py  datasets.py  evaluator.py  pipelines.py  recording.py  run.py  run_pipeline.py
asr_eval/correction/: __init__.py  bow_corpus.py  corrector_langchain.py  corrector_levenshtein.py  corrector_wikirag.py  interfaces.py
asr_eval/ctc/: __init__.py  base.py  chunking.py  forced_alignment.py
asr_eval/datasets/: datasets.py  recording.py
asr_eval/domain_specific/: bow_corpus.py  corpus.py  post_correction.py
asr_eval/linguistics/: __init__.py  linguistics.py
asr_eval/models/: __init__.py  ast_wrapper.py  base.py  flamingo_wrapper.py  gemma_wrapper.py  gigaam.py  gigaam_wrapper.py  legacy_pisets_wrapper.py  longform.py  nvidia_conformer.py  nvidia_conformer_wrapper.py  pisets_wrapper.py  pyannote_segmenter.py  pyannote_wrapper.py  qwen2_audio_wrapper.py  qwen_audio_wrapper.py  speechbrain.py  speechbrain_wrapper.py  t_one_wrapper.py  vosk.py  vosk54_wrapper.py  vosk_streaming_wrapper.py  voxtral_wrapper.py  whisper_wrapper.py  yandex_speechkit_wrapper.py
asr_eval/models/base/: __init__.py  interfaces.py  longform.py  openai_wrapper.py
asr_eval/segments/: __init__.py  chunking.py  segment.py
asr_eval/streaming/: __init__.py  base.py  buffer.py  caller.py  evaluation.py  model.py  plots.py  sender.py  timings.py  transcription.py  wrappers.py
asr_eval/streaming/models/: vosk.py
asr_eval/tts/: __init__.py  yandex_speechkit.py
asr_eval/utils/: __init__.py  audio_ops.py  audio_segment.py  autodoc.py  formatting.py  misc.py  plots.py  serializing.py  server.py  srt.py  tempfile.py  types.py  utils.py
datasets/: README.md
datasets/domain-specific-texts/: texts.txt
datasets/domain-specific-words/raw/: chemistry.txt  computer-games.txt  cytologygenetics.txt  linguistics.txt  mathematics.txt  ml-nlp.txt  zoology-domain-specific.txt
datasets/small-domain-dicts/: Cars process.ipynb  Films process.ipynb  Manga process.ipynb
datasets/small-domain-dicts/cars/: texts_multivariant.txt  texts_single_variant.txt  words.txt
datasets/small-domain-dicts/films/: texts.txt  words.txt
datasets/small-domain-dicts/manga/: texts.txt  words.txt
docs/source/: acknowledgements.rst  conf.py  framework.rst  index.rst  installation.rst  overview.rst  reference.rst  reproducing.rst  streaming.rst  tree.rst
docs/source/_static/: my_theme.css
notebooks/: Compare.ipynb  Datasets.ipynb  Demo.ipynb  Dion diarization.ipynb  GigaAM timings.ipynb  LoadTest.ipynb  Podlodka.ipynb  multivariant prep.ipynb
requirements/: requirements-dev.txt  requirements-gigaam.txt  requirements-vosk0.54.txt  requirements.txt
scripts/: map_dataset.py  map_dataset.sh  sova_gigaam2.py
tests/: test_align.py  test_buffer.py  test_ctc.py  test_ctc_utils.py  test_evaluation.py  test_force_alignment.py  test_gigaam.py  test_imports.py  test_model.py  test_speechbrain.py  test_streaming_wrappers.py  test_t_one.py  test_transcription.py  test_transcription_chunk.py  test_vosk.py  test_wave.py
tests/testdata/: formula1.txt  minecraft.txt
